# ticketflow-env

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION.md  client.py  grader.py  inference.py  models.py  openenv.yaml  policy.py  pyproject.toml  requirements.txt  reward.py  tasks.py  unicode_cleanup.py
server/: __init__.py  app.py
tests/: test_env.py
ticketflow_env/: __init__.py  client.py  models.py
ticketflow_env/server/: __init__.py  app.py  environment.py
