[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketflow-env"
version = "0.1.0"
description = "OpenEnv-compatible customer support ticket resolution benchmark."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenEnv Hackathon Submission" }]
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["tasks", "policy", "reward", "grader"]

[tool.setuptools.packages.find]
include = ["ticketflow_env*", "server*"]
